--- a/src/Components/ProductDisplay/ProductDisplay.css
+++ b/src/Components/ProductDisplay/ProductDisplay.css
@@ -63,15 +63,7 @@
 
 
 }
-/* .productdisplay-right-size div{
-    padding: 18px 24px;
-    display: flex;
-    background: #fbfbfb;
- 
-    border-radius: 3px;
-    cursor: pointer;
-    
-} */
+
 .productdisplay-right-size ul  {
     display: flex;
     flex-direction: row;
@@ -105,3 +97,85 @@
     font-size: 30px;
     font-weight: 600;
  }
+
+ @media screen and (min-width: 300px) and (max-width: 600px) {
+  .productdisplay {
+    flex-direction: column;
+    margin: 0px 15px;
+  }
+
+  .productdisplay-left {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .productdisplay-imagelist {
+    flex-direction: row;
+    gap: 10px;
+    overflow-x: auto;
+    margin: 0;
+    justify-content: center;
+  }
+
+  .productdisplay-imagelist img {
+    height: 100px;
+    width: auto;
+  }
+
+  .productdisplay-main-img {
+    width: 100%;
+    height: auto;
+    max-height: 400px;
+    object-fit: contain;
+  }
+
+  .productdisplay-right {
+    margin: 20px 0;
+    padding: 0 10px;
+  }
+
+  .productdisplay-right h1 {
+    font-size: 24px;
+  }
+
+  .productdisplay-right-star {
+    font-size: 14px;
+    gap: 4px;
+  }
+
+  .productdisplay-rightprices {
+    flex-direction: column;
+    gap: 10px;
+    font-size: 20px;
+  }
+
+  .productdisplay-right-size h1 {
+    font-size: 18px;
+    margin-top: 30px;
+  }
+
+  .productdisplay-right-size ul {
+    flex-wrap: wrap;
+    gap: 10px;
+    padding-left: 0;
+  }
+
+  .productdisplay-right-size li {
+    padding: 10px 20px;
+    font-size: 14px;
+  }
+
+  .productdisplay-right-size button {
+    width: 100%;
+    padding: 15px;
+    font-size: 14px;
+    margin-top: 20px;
+  }
+
+  .prodoctdisplay-right-category span {
+    font-size: 18px;
+  }
+}
+
+
