--- a/src/Components/Breadcrums/Breadcrum.css
+++ b/src/Components/Breadcrums/Breadcrum.css
@@ -8,3 +8,11 @@
     margin: 60px 170px;
     text-transform: capitalize;
 }
+@media screen and (min-width: 300px) and (max-width: 600px) {
+  .breadcrum {
+    margin: 20px 15px;
+    font-size: 14px;
+    flex-wrap: wrap;
+    gap: 5px;
+  }
+}
