--- a/src/Components/Cartitems/CartItems.css
+++ b/src/Components/Cartitems/CartItems.css
@@ -96,3 +96,63 @@
     cursor: pointer;
 
 }
+
+@media screen and (min-width: 300px) and (max-width: 600px) {
+  .cartitems {
+    margin: 20px 15px;
+  }
+
+  .cartitem-format {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 20px;
+    font-size: 12px;
+    padding: 10px 0;
+  }
+
+  .cartitems-down {
+    flex-direction: column;
+    margin: 50px 0;
+    gap: 30px;
+  }
+
+  .cartitems-total {
+    margin-right: 0;
+    width: 100%;
+    gap: 20px;
+  }
+
+  .cartitems-total button {
+    width: 100%;
+    height: 50px;
+    font-size: 14px;
+  }
+
+  .cart-promocode {
+    font-size: 12px;
+    width: 100%;
+  }
+
+  .cart-promobox {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 10px;
+    height: auto;
+  }
+
+  .cart-promobox input {
+    width: 100%;
+    height: 40px;
+    font-size: 14px;
+    padding: 5px;
+  }
+
+  .cart-promobox button {
+    width: 100%;
+    height: 45px;
+    font-size: 14px;
+  }
+}
