--- a/src/Components/Descriptionbox/Description.css
+++ b/src/Components/Descriptionbox/Description.css
@@ -28,3 +28,25 @@
     padding: 48px;
     padding-bottom: 70px;
 }
+@media screen and (min-width: 300px) and (max-width: 600px) {
+  .description {
+    margin: 40px 15px;
+  }
+
+  .description-navigator {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .description-nav-box {
+    width: 100%;
+    height: 50px;
+    font-size: 14px;
+  }
+
+  .description-description {
+    padding: 20px;
+    gap: 15px;
+    font-size: 14px;
+  }
+}
