--- a/src/Components/NewCollections/newcls.css
+++ b/src/Components/NewCollections/newcls.css
@@ -25,3 +25,18 @@
     margin-top: 50px;
     gap: 30px;
 }
+@media only screen and (min-width: 300px) and (max-width: 600px){
+    .new-collections h1{
+    font-size: 20px;
+    font-weight: 500;    
+}
+.new-collections hr{
+    width: 200px;
+    height: 3px;
+}
+.collections{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+}
