--- a/src/Components/NewsLetter/NewsLetter.css
+++ b/src/Components/NewsLetter/NewsLetter.css
@@ -56,3 +56,38 @@
     cursor: pointer;
 
 }
+@media only screen and (min-width: 300px) and (max-width: 600px){
+    .newsletter{
+    height:50vh;
+    padding: 0px 30px;
+    flex-direction: column;
+    
+}
+    .newsletter h1{
+    font-size: 20px;
+    font-weight: 500;
+}
+.newsletter p{
+    color: #454545;
+    font-size: 10px;
+}
+.newsletter div{
+    
+    width:250px;
+    height: 70px;
+    
+}
+.newsletter input{
+    width: 150px;
+margin-left: 10px;
+    font-size: 10px;
+
+}
+
+.newsletter div button{
+    width: 100px;
+    font-size: 10px;
+
+}
+
+}
